feat: ensure that deleteRoom method on RoomService works
